--- a/index3.html
+++ b/index3.html
@@ -74,8 +74,7 @@
 				<div class="header__top">
 					<ul class="main-menu main-menu_top">
 						<li class="main-menu__item"><a href="#" class="main-menu__link">О садовом центре</a></li>
-						<li class="main-menu__item"><a href="#" class="main-menu__link">Оплата</a></li>
-						<li class="main-menu__item"><a href="#" class="main-menu__link">Доставка</a></li>
+						<li class="main-menu__item"><a href="#" class="main-menu__link">Оплата и доставка</a></li>
 						<li class="main-menu__item"><a href="#" class="main-menu__link">Услуги</a></li>
 						<li class="main-menu__item"><a href="#" class="main-menu__link">Отзывы</a></li>
 						<li class="main-menu__item"><a href="#" class="main-menu__link">Блог профессионалов</a></li>
@@ -368,8 +367,7 @@
 			<div class="footer">
 				<ul class="main-menu main-menu_bottom">
 					<li class="main-menu__item"><a href="#" class="main-menu__link">О садовом центре</a></li>
-					<li class="main-menu__item"><a href="#" class="main-menu__link">Оплата</a></li>
-					<li class="main-menu__item"><a href="#" class="main-menu__link">Доставка</a></li>
+					<li class="main-menu__item"><a href="#" class="main-menu__link">Оплата и доставка</a></li>
 					<li class="main-menu__item"><a href="#" class="main-menu__link">Услуги</a></li>
 					<li class="main-menu__item"><a href="#" class="main-menu__link">Отзывы</a></li>
 					<li class="main-menu__item"><a href="#" class="main-menu__link">Блог профессионалов</a></li>
