--- a/index3.html
+++ b/index3.html
@@ -184,7 +184,7 @@
 						</ul>
 					</div>
 					<div class="b-goods">
-						<p class="b-catalog__title b-catalog__title_bottom_10">Барбарис Тунберга «Арлекин»</p>
+						<h1 class="b-catalog__title b-catalog__title_bottom_10">Барбарис Тунберга «Арлекин»</h1>
 						<p class="b-catalog__subtitle">Berberis Thunbergii Harlequin</p>
 						<div class="b-goods__photo">
 							<div id="rg-gallery" class="rg-gallery">
