--- a/index6.html
+++ b/index6.html
@@ -113,34 +113,59 @@
 				<div class="b-breadcrumbs">
 					<ul>
 						<li><a href="#">Главная</a></li>
-						<li><span>Оплата и доставка</span></li>
+						<li><span>Услуги Садового центра</span></li>
 					</ul>
 				</div>
-				<h1 class="b-title">Оплата и доставка</h1>
-				<p class="b-text b-text_bottom_30">Внимание!  Доставка товара производится только по Ярославской области.  В другие регионы России товар не отправляется.</p>
-				<p class="b-subtitle">Как заказать:</p>
+				<h1 class="b-title">Услуги Садового центра</h1>
+				<p class="b-subtitle">1.	Доставка  покупки.</p>
+				<p class="b-text"><b>Стоимость доставки</b> – 300 руб. в черте Ярославля,  доставка за пределы города -  20 руб/км. Доставка покупки стоимостью свыше 10000 рублей  осуществляется БЕСПЛАТНО. Разгрузка товара весом до 300 кг – бесплатно, от 300до 1000 кг - 500 руб,  более 1000 кг – 400 руб/тонна. Доставка товара с использованием манипулятора – от 1300 руб/час.
+				</p>
+				<p class="b-subtitle b-subtitle_small">Заказ доставки и оплата.</p>
 				<div class="b-text">
-					<p>1. Выберите товар по каталогу и поместите выбранный товар в корзину.</p>
-					<p>2. Позвоните нашему менеджеру по телефону (4852) 68-15-80, (4852)78-07-17 и оформите заказ.</p>
-					<p>3. Если Вы зарегистрируетесь на нашем сайте, мы получим заказ автоматически и свяжемся с Вами в течение дня.</p>
+					<p>Оплата доставки и разгрузки производится на кассе магазина после оплаты покупки.</p>
+					<p>Услуга предоставляется 7 дней в неделю. Интервал доставки согласовывается при оформлении заказа: с 8:00 до 20:00. Покупатель может выбрать любой интервал из этого периода – с 8:00 до 14:00 или с 14:00 до 20:00.</p>
 				</div>
-				<p class="b-subtitle">Оплатить и получить товар Вы можете двумя способами:</p>
+				<p class="b-subtitle b-subtitle_small">Доставка и разгрузка.</p>
+				<p class="b-text">Доставка товара производится до подъезда, дачи, коттеджа исключительно при наличии подъездных путей, предназначенных для проезда грузовых автомобилей. Разнос товара по саду и по разным помещениям внутри квартиры (коттеджа, частного дома, дачи), в том числе занос на другой уровень/ этаж в многоуровневых квартирах (коттедже, частном доме, на даче) не производится. Разгрузку машины производит водитель. При весе товара от 100 до 300 кг разгрузка машины осуществляется совместно с клиентом.</p>
+				<p class="b-subtitle b-subtitle_small">Отказ от доставки.</p>
+				<p class="b-text">Если у вас изменились обстоятельства, вы можете легко отказаться от доставки, но не позднее, чем за один календарный день. Если в назначенное время вы не сможете встретить экспедитора, доставившего товар по адресу, указанному в заявке, в течение 30 минут экспедитор уезжает, оставляя уведомление об ожидании. В такой ситуации последующая доставка оплачивается покупателем повторно.</p>
+				<p class="b-subtitle b-subtitle_small">Проверка и рекламации.</p>
+				<div class="b-text"><p>После разгрузки подписывается акт приема-передачи товара. После подписания клиентом этого документа претензии по количеству и качеству доставленного товара не принимаются.</p><p>Если товар не был доставлен вовремя или поврежден при доставке, позвоните, по номеру телефона, указанному в чеке. Вы также можете оставить свои замечания по работе Служ¬бы доставки на бланке заказа при получении товаров.</p></div>
+				<p class="b-subtitle">2.	Пересадка растений в горшки на территории Садового центра.</p>
+				<p class="b-text">Специалисты Садового центра помогут подобрать  необходимый контейнер для ваших растений,  а также  при  покупке  почвогрунта  БЕСПЛАТНО произведут  пересадку   растений в выбранный контейнер.</p>
+				<p class="b-subtitle">3.	Консультации без выезда.</p>
+				<p class="b-text">Продавцы-консультанты  в Садовом центре БЕСПЛАТНО дадут необходимую консультацию по  любым садовым вопросам - выбору  посадочного материала,  по уходу за растениями,  защите  сада от вредителей и болезней и другим.</p>
+				<p class="b-subtitle">4.	Консультации  дизайнера- садовника с выездом на участок.</p>
+				<p class="b-text">500 рублей/ час с использованием транспорта заказчика,  проезд специалиста  на служебном автомобиле оплачивается отдельно.</p>
+				<p class="b-subtitle">5.	Растения под заказ.</p>
+				<p class="b-text">Если в садовом центре не оказалось  необходимого Вам  вида или размера растения, мы  подберем для вашего сада  растения из ассортимента  наших партнеров – питомников.  Время исполнения заказа – 7-10 дней.</p>
+				<p class="b-subtitle">6.	Посадка растений.</p>
+				<p class="b-text">Посадка растений на участке требует серьезного подхода, особенно если эти растения - уже сформировавшиеся деревья или кустарники. Выбор подходящего места,  подготовка посадочной ямы, внесение удобрений, правильное «соседство», соблюдение технологии посадки - все имеет значение для гармоничного развития садовых растений. Только тогда они будут радовать вас долгие годы.  Садовый центр Garden Rose  предоставляет профессиональную услугу по посадке приобретенных растений.</p>
+				<p class="b-subtitle">7.	Уход за садом   разовый.</p>
 				<div class="b-text">
-					<p>1. В Садовых центрах "GARDEN ROSE" по адресу г. Ярославль, Ленинградский пр-т, д123 около ТЦ "Альтаир"; Полушкина Роща д.9 около ТЦ "Тандем".</p>
-					<p>2. С  доставкой по Ярославлю в течение шестнадцати рабочих часов.</p>
+					<p>Специалисты Службы Садового Сервиса  выполнят полный комплекс услуг по уходу за растениями на Вашем садовом участке и придомовой территории:</p>
 					<ul>
-						<li>Минимальная сумма заказа с доставкой по Ярославлю — 3000 руб.</li>
-						<li>Стоимость доставки в любой район города — 200 рублей.</li>
-						<li>При заказе 10000 рублей и более доставка бесплатно.</li>
-						<li>Стоимость доставки  за пределы Ярославля рассчитывается индивидуально.</li>
-						<li>Стоимость заказа и доставки Вы оплачиваете курьеру при получении.</li>
-						<li>Вместе с заказанными товарами Вам будут предоставлены кассовый и товарный чеки. При получении товара проверьте его количество и качество!</li>
+						<li>уход за садом (консультации дизайнера-садовника по посадке и уходу, а также реконструкции Вашего сада)</li>
+						<li>уход за газоном (создание, стрижка, восстановление, внесение удобрений, мульчирование)</li>
+						<li>уход за деревьями (посадка, формирование кроны, санитарная обрезка, обработка от вредителей, внесение удобрений)</li>
+						<li>доставка  деревьев и кустарников, выбор места для посадки и посадка</li>
+						<li>стрижка живых изгородей</li>
+						<li>удаление деревьев</li>
+						<li>консервация/расконсервация сада осенью и весной</li>
+						<li>уход за зимним садом</li>
+						<li>украшение дома и сада к Рождеству</li>
+						<li>фитодизайн  помещений – квартиры, офиса, загородного дома</li>
 					</ul>
 				</div>
-				<p class="b-subtitle">Гарантии</p>
-				<p class="b-text">Если по каким-либо причинам Вас не удовлетворят характеристики поставленного товара, мы гарантируем его замену или возврат денег в соответствии с "Законом о защите прав потребителей".</p>
-				<p class="b-subtitle">Заказы от юридических лиц</p>
-				<div class="b-text"><p>Условия поставки – 100% предоплата. Для оформления заказа и получения счета на оплату необходимо связаться с нашим менеджером по тел. /факсу (4852)78-07-17, (4852)68-15-80 или e-mail: landrose@mail.ru</p><p>При этом необходимо в тексте письма указать название организации и реквизиты для обратной связи!</p></div>
+				<p class="b-subtitle">8.	Комплексные программы.</p>
+				<p class="b-text">Программы по уходу за садом: месячное абонентское обслуживание,  осенняя программа по подготовке сада к зиме,  весенний уход за садом.</p>
+				<p class="b-subtitle">9.	Аренда  садовой техники.</p>
+				<div class="b-text">
+					<p>Это хорошая возможность, существенно сэкономить на покупке дорогого оборудования и выполнить необходимые работы в саду самостоятельно.  Кроме того, мы можем предоставить Вам нашего специалиста, который выполнит всю необходимую работу на профессиональном уровне. </p>
+					<p>Стоимость аренды садовой техники :</p>
+					<p>1.	Газонный каток – 500 руб/сутки</p>
+					<p>2.	Бункер для внесения удобрений – 300 руб/сутки</p>
+				</div>
 			</div>
 			<div class="bottom-map">
 				<span class="bottom-map__title">Где нас найти?</span>
