--- a/index6.html
+++ b/index6.html
@@ -48,7 +48,7 @@
 				</div>
 				<div style="clear: both"></div>
 				<div class="header__main">
-					<a href="#"><img class="header__main__logo" src="f/i/header-logo.png"></img></a>
+					<a href="/"><img class="header__main__logo" src="f/i/header-logo.png"></img></a>
 					<div class="header__phone-wrap">
 						<span class="header__phone-wrap__code">(4852)</span>
 						<span class="header__phone-wrap__phone">68-06-16</span>
