--- a/index3.html
+++ b/index3.html
@@ -222,13 +222,15 @@
 								</div><div class="b-goods__table-cell">
 									Ширина, <span>см</span>
 								</div><div class="b-goods__table-cell">
+									Упаковка корневой системы
+								</div><div class="b-goods__table-cell">
 									Обхват<br> ствола, <span>см</span>
 								</div><div class="b-goods__table-cell">
 									Страна <br>происхождения
 								</div><div class="b-goods__table-cell">
 									Цена
-								</div><div class="b-goods__table-cell">
-									Количество
+								</div><div class="b-goods__table-cell" style="text-align:center;min-width:100px">
+									<nobr>Кол-во</nobr>
 								</div>
 							</div>
 							<a href="#" class="b-goods__table-row">
@@ -237,17 +239,17 @@
 								</div><div class="b-goods__table-cell">
 									60-90
 								</div><div class="b-goods__table-cell">
+									Текст
+								</div><div class="b-goods__table-cell">
 									10
 								</div><div class="b-goods__table-cell">
 									Польша
 								</div><div class="b-goods__table-cell b-goods__table-cell_price">
 									350 <b class="rub">&#8399;</b>
 								</div><div class="b-goods__table-cell b-goods__table-cell_count b-spinner" onclick="return false;">
-									<span class="b-count-btn">-</span>
-										<input class="b-count-input" type="number" value="1">
-									<span class="b-count-btn">+</span>
+									<nobr>Под заказ</nobr>
 								</div><div class="b-goods__table-cell" onclick="return false;">
-									<button type="" class="b-cart-btn">В корзину</button>
+									<button type="" class="b-cart-btn">Заказать</button>
 								</div>
 							</a>
 							<a href="#" class="b-goods__table-row">
@@ -255,6 +257,8 @@
 									90-150
 								</div><div class="b-goods__table-cell">
 									90-150
+								</div><div class="b-goods__table-cell">
+									Текст
 								</div><div class="b-goods__table-cell">
 									15
 								</div><div class="b-goods__table-cell">
@@ -262,11 +266,11 @@
 								</div><div class="b-goods__table-cell b-goods__table-cell_price">
 									650 <b class="rub">&#8399;</b>
 								</div><div class="b-goods__table-cell b-goods__table-cell_count b-spinner">
-									<span class="b-count-btn">-</span>
+									<nobr><span class="b-count-btn">-</span>
 										<input class="b-count-input" type="number" value="1" onclick="return false;">
-									<span class="b-count-btn">+</span>
+									<span class="b-count-btn">+</span></nobr>
 								</div><div class="b-goods__table-cell" onclick="return false;">
-									<button type="" class="b-cart-btn">В корзину</button>
+									<button type="" class="b-cart-btn">В&nbsp;корзину</button>
 								</div>
 							</a>
 							<a href="#" class="b-goods__table-row">
@@ -274,6 +278,8 @@
 									150-200
 								</div><div class="b-goods__table-cell">
 									150-200
+								</div><div class="b-goods__table-cell">
+									Текст
 								</div><div class="b-goods__table-cell">
 									25
 								</div><div class="b-goods__table-cell">
@@ -285,7 +291,7 @@
 										<input class="b-count-input" type="number" value="1">
 									<span class="b-count-btn">+</span>
 								</div><div class="b-goods__table-cell" onclick="return false;">
-									<button type="" class="b-cart-btn">В корзину</button>
+									<button type="" class="b-cart-btn">В&nbsp;корзину</button>
 								</div>
 							</a>
 						</div>
